--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1917,14 +1917,14 @@ a {
   padding-right: 1.5rem;
 }
 .cid-sSrGPAd0wg {
-  padding-top: 0rem;
+  padding-top: 1rem;
   padding-bottom: 0rem;
   background-color: #bed3f9;
 }
 .cid-sSbJeWdVKo {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #8caff0;
+  background-color: #6592e6;
 }
 .cid-sSbJeWdVKo .row-links {
   width: 100%;
